v6/runtime - added Pugs::Runtime::Perl6::ReadOnly & ReadWrite cell types v6/emitter(2) - fixed internal method names: set->STORE, get->FETCH, pair->Pair - typing support is in place (not used yet) - binding to Value makes a Scalar read-only
git-svn-id: http://svn.pugscode.org/pugs@14462 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Emitter-Perl6-Perl5-2/HACKING
+++ b/misc/pX/Common/Pugs-Emitter-Perl6-Perl5-2/HACKING
@@ -19,7 +19,7 @@ Methods
 .unboxed - unboxes an object. Example: Int.unbox -> int
 
 .WHAT  - returns the class as a Class (which stringifies to the class name)
-.perl  - returns a Str, which contains the object dumped as Perl6 source code  
+.perl  - returns a Str, which contains the object dumped as Perl6 source code  XXX
 .list  
 
 Coercions
@@ -40,8 +40,8 @@ Container operations
 .bind( $cell )
 .bind_from - returns this container's cell (as plain source code, not an object)
 
-.set( $value ) - same as STORE
-.value - returns the cell value; same as FETCH
+.STORE( $value )
+.FETCH - returns the cell value
 
 .array .hash .scalar - coerce values into containers
 
@@ -160,3 +160,8 @@ See also: 'type-example.pl'
     $$a->str()
         - call stringification method on $a's value
 
+-- Questions
+
+    $a[10] := 1;
+    @$a = ();  # error ???
+  
