* Pugs.Junc: Implement Sebastian Sylvan's suggestion of using   MVars instead of Chans to accomplish junctive autothreading,   much improving the performance on MacIntel here.
git-svn-id: http://svn.pugscode.org/pugs@14476 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -162,6 +162,7 @@ Scott "flounder99" Fitzenrider
 Scott McWhirter                  (KUNGFUFTR)
 Sean O'Rourke                    (SEANO)
 Sebastian "sri" Riedel           (SRI)
+Sebastian Sylvan
 Shae "shapr" Matijs Erisson
 Shawn Sorichetti                 (SSORICHE)
 Shen, Yu-Teh
