--- a/AUTHORS
+++ b/AUTHORS
@@ -87,6 +87,7 @@ Ilmari "wolverian" Vacklin
 Ingo "iblech" Blechschmidt
 Ingy dot Net                     (INGY)      Ingy döt Net / 應吉大聶
 Isaac "SyntaxNinja" Jones
+Ivan "raptor" Georgiev
 James "theorbtwo" Mastros        (JMASTROS)
 Jeff Horwitz                     (JHORWITZ)
 Jens "jrieks" Rieks
