v6/runtime - added setup_type() create typed-cell p5-classes v6/emitter(2) - my/our take parameters { readonly => 1, type => Dog }
git-svn-id: http://svn.pugscode.org/pugs@14501 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Emitter-Perl6-Perl5-2/HACKING
+++ b/misc/pX/Common/Pugs-Emitter-Perl6-Perl5-2/HACKING
@@ -165,3 +165,6 @@ See also: 'type-example.pl'
     $a[10] := 1;
     @$a = ();  # error ???
   
+    my Int $a;
+    my Str $b;
+    $a := $b;  # error ???
