v6/emitter(2) - the type of cell depends on the context     $native.bind_from is read-only     $native.VAR is read-write
git-svn-id: http://svn.pugscode.org/pugs@14503 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Pugs-Emitter-Perl6-Perl5-2/HACKING
+++ b/misc/pX/Common/Pugs-Emitter-Perl6-Perl5-2/HACKING
@@ -40,6 +40,10 @@ Container operations
 .bind( $cell )
 .bind_from - returns this container's cell (as plain source code, not an object)
 
+.VAR - returns this container's cell
+    $native.bind_from is read-only
+    $native.VAR is read-write 
+
 .STORE( $value )
 .FETCH - returns the cell value
 
