* Add LICHTKIND to AUTHORS
git-svn-id: http://svn.pugscode.org/pugs@14530 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -80,6 +80,7 @@ Garret Rooney                    (ROONEG)
 "gcomnz"
 Geoffrey Broadwell               (GJB)
 Gianni Ceccarelli                (DAKKAR)
+Herbert Breunung                 (LICHTKIND)
 Hezekiah "hcarty" Carty
 Hsin-Chan Chien                  (HCCHIEN)   簡信昌
 Ian "Igloo" Lynagh
@@ -168,7 +169,7 @@ Shae "shapr" Matijs Erisson
 Shawn Sorichetti                 (SSORICHE)
 Shen, Yu-Teh
 Shlomi "rindolf" Fish            (SHLOMIF)   שלומי פיש
-Shmarya "shmar" Rubenstein	 (SHMARYA)
+Shmarya "shmar" Rubenstein       (SHMARYA)
 Shu-Chun "scw" Weng                          翁書鈞
 Simon "lathos" Cozens            (SIMON)
 Simon "JeffaCake" Marlow
@@ -191,7 +192,7 @@ Trey Harris                      (TREY)
 Uri Guttman                      (URI)
 Vadim Konovalov                  (VKON)
 Will Coleda                      (COKE)
-Wim "andara" Vanderbauwhede	(WVDB)
+Wim "andara" Vanderbauwhede      (WVDB)
 Yiyi "xinming" Hu                            鹄驿懿
 Yuan-Chen "ycheng" Cheng                     鄭原真
 Yung-Chung Lin                   (XERN)      林永忠
