* S03: Missing semicolon. * S06: Missing comma. (spotted by cognominal++.)
git-svn-id: http://svn.pugscode.org/pugs@23622 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -715,7 +715,7 @@ It is allowed to specify additional parameters. The Capture binding merely
 takes a snapshot of what's left of the Capture at that point and then
 continues binding as if the Capture parameter weren't there:
 
-    sub compare (|$args Num $x, Num $y --> Bool) { ... }
+    sub compare (|$args, Num $x, Num $y --> Bool) { ... }
 
 =head2 Flattening argument lists
 
