--- a/v6/README
+++ b/v6/README
@@ -2,8 +2,10 @@
 
 This is not the perl5 v6-alpha, see perl5/Pugs-Compiler-Perl6 for that.
 
-There are 2 subprojects:
+There are 3 subprojects:
 
 v6.pm is a plain translation of the perl5 v6.pm compiler, such that the modules could be interchangeable.
 
 v6-Compiler is meant as a more advanced compiler, but it is also more difficult to bootstrap because it needs a more complete Perl 6 compiler.
+
+v6-MiniPerl6 is a subset of Perl 6 used to bootstrap the full Perl 6.
