AUTHORS: hello, world\n :) src/Pugs/Compat.hs: added file time tests src/Pugs/Internals.hs, src/Pugs/Prim.hs: abstract out guts of "time" for   use in $*BASETIME and file tests src/Pugs/Run.hs: add $*BASETIME src/Pugs/AST.hs: document _reserved and filterUserDefinedPad; add $*BASETIME   to _reserved src/Pugs/Prim.hs: add file time operators -M, -C, -A src/Pugs/Prim/FileTest.hs: add implementation of file time operators t/operators/filetest.t: correct existing file time operator tests, add a few   more, add all of them to the plan
git-svn-id: http://svn.pugscode.org/pugs@14599 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -34,6 +34,7 @@ Benjamin "integral" Smith        (BSMITH)
 Bestian Tang                                 唐宗浩
 Brad "bsb" Bowman                (BOWMANBS)
 Brandon Michael "skew" Moore
+Brandon S Allbery KF8NH
 Bryan Donlan                     (BDONLAN)
 Bryan "mrborisguy" Burgers
 Caio Marcelo de Oliveira Filho
