Add my name to the AUTHORS file. Add filetest parsing tests for "- f(...)".
git-svn-id: http://svn.pugscode.org/pugs@14613 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -193,6 +193,7 @@ Trey Harris                      (TREY)
 Uri Guttman                      (URI)
 Vadim Konovalov                  (VKON)
 Will Coleda                      (COKE)
+William "loumz" Shallum
 Wim "andara" Vanderbauwhede      (WVDB)
 Yiyi "xinming" Hu                            鹄驿懿
 Yuan-Chen "ycheng" Cheng                     鄭原真
