change p5embed to not use __init symbol on OpenBSD (conflict with standard C library)
git-svn-id: http://svn.pugscode.org/pugs@14622 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -100,6 +100,7 @@ Joao Fernando Ferreira           (JOAO)      João Fernando Ferreira
 Jody Belka                       (KNEW)
 John van Krieken                 (VLADTZ)
 John "js0000" Saylor
+Jonathan Rockway                 (JROCKWAY)
 Jonathan Scott "PerlJam" Duff    (DUFF)
 Jonathan Worthington             (JONATHAN)
 Jos Boumans                      (KANE)
