--- a/AUTHORS
+++ b/AUTHORS
@@ -81,6 +81,7 @@ Garret Rooney                    (ROONEG)
 "gcomnz"
 Geoffrey Broadwell               (GJB)
 Gianni Ceccarelli                (DAKKAR)
+Hans van Dok			 (FOAD)
 Herbert Breunung                 (LICHTKIND)
 Hezekiah "hcarty" Carty
 Hsin-Chan Chien                  (HCCHIEN)   簡信昌
