--- a/AUTHORS
+++ b/AUTHORS
@@ -194,6 +194,7 @@ Tom Moertel                      (TMOERTEL)
 Trey Harris                      (TREY)
 Uri Guttman                      (URI)
 Vadim Konovalov                  (VKON)
+Vincent Foley                    (GNUVINCE)
 Will Coleda                      (COKE)
 William "loumz" Shallum
 Wim "andara" Vanderbauwhede      (WVDB)
