Added tests to t/operators/range.t to make sure that lists were forced to scalar context.
git-svn-id: http://svn.pugscode.org/pugs@14663 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -194,7 +194,7 @@ Tom Moertel                      (TMOERTEL)
 Trey Harris                      (TREY)
 Uri Guttman                      (URI)
 Vadim Konovalov                  (VKON)
-Vincent Foley                    (GNUVINCE)
+Vincent Foley                    (VFOLEY)
 Will Coleda                      (COKE)
 William "loumz" Shallum
 Wim "andara" Vanderbauwhede      (WVDB)
